--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpak --watch --mode=development"
+    "start": "webpack --watch --mode=development"
   },
   "keywords": [],
   "author": "dowinterfor6",
